[gd_scene load_steps=2 format=3 uid="uid://b6d5ti0o70rw2"]

[ext_resource type="Script" path="res://ReWritten/Options.gd" id="1_ym6eb"]

[node name="ScrollContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ym6eb")

[node name="Tabs" type="TabBar" parent="."]
visible = false
layout_mode = 2
tab_count = 3
tab_alignment = 1
tab_0/title = "General"
tab_1/title = "Extras"
tab_2/title = "Cheats"

[node name="Scroller" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="General" type="VBoxContainer" parent="Scroller"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudOpt" type="HBoxContainer" parent="Scroller/General"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroller/General/AudOpt"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Audio output:"

[node name="Audio" type="OptionButton" parent="Scroller/General/AudOpt"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "All Audio Enabled"
popup/item_0/id = 3
popup/item_1/text = "Music Only"
popup/item_1/id = 0
popup/item_2/text = "SFX Only"
popup/item_2/id = 1
popup/item_3/text = "All Audio Muted"
popup/item_3/id = 2

[node name="MusicVol" type="HBoxContainer" parent="Scroller/General"]
layout_mode = 2

[node name="Label2" type="Label" parent="Scroller/General/MusicVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Music volume:"

[node name="MusicVol" type="HSlider" parent="Scroller/General/MusicVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SFXVol" type="HBoxContainer" parent="Scroller/General"]
layout_mode = 2

[node name="Label3" type="Label" parent="Scroller/General/SFXVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Sound effects volume:"

[node name="SFXVol" type="HSlider" parent="Scroller/General/SFXVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="Credits" type="Button" parent="Scroller/General"]
layout_mode = 2
text = "View Full Credits"

[node name="Sauce" type="Button" parent="Scroller/General"]
layout_mode = 2
text = "View source code on Github"

[node name="Extras" type="VBoxContainer" parent="Scroller"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Peaceful" type="CheckButton" parent="Scroller/Extras"]
layout_mode = 2
text = "No enemies:"

[node name="Kamikaze" type="CheckButton" parent="Scroller/Extras"]
layout_mode = 2
text = "Kamikaze enemies:"

[node name="ShipType" type="OptionButton" parent="Scroller/Extras"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Normal"
popup/item_0/id = 2
popup/item_1/text = "Galaga"
popup/item_1/id = 1
popup/item_2/text = "Normal (Inverted)"
popup/item_2/id = 2

[node name="RBSwap" type="CheckButton" parent="Scroller/Extras"]
layout_mode = 2
text = "Swap red and blue:"

[node name="BorderType" type="OptionButton" parent="Scroller/Extras"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Wii U Gamepad"
popup/item_1/id = 1
popup/item_2/text = "Switch Tablet"
popup/item_2/id = 2

[node name="Cheats" type="VBoxContainer" parent="Scroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Invincibility" type="CheckButton" parent="Scroller/Cheats"]
layout_mode = 2
text = "Invincibility:
"

[node name="Triple Shot" type="CheckButton" parent="Scroller/Cheats"]
layout_mode = 2
text = "Triple Shot:
"

[node name="Double Shot" type="CheckButton" parent="Scroller/Cheats"]
layout_mode = 2
text = "Double Shot:"

[node name="Speed Hack" type="CheckButton" parent="Scroller/Cheats"]
layout_mode = 2
text = "Changeable Move Speed:
"

[node name="99 Lives" type="CheckButton" parent="Scroller/Cheats"]
layout_mode = 2
text = "Start with 99 lives:
"

[node name="VBoxContainer" type="VBoxContainer" parent="Scroller"]
layout_mode = 2

[node name="FileOptions" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Load" type="Button" parent="FileOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load File"

[node name="Save" type="Button" parent="FileOptions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save File"

[connection signal="drag_ended" from="Scroller/General/MusicVol/MusicVol" to="." method="_on_music_vol_drag_ended"]
[connection signal="value_changed" from="Scroller/General/MusicVol/MusicVol" to="." method="_on_music_vol_value_changed"]
[connection signal="drag_ended" from="Scroller/General/SFXVol/SFXVol" to="." method="_on_sfx_vol_drag_ended"]
[connection signal="value_changed" from="Scroller/General/SFXVol/SFXVol" to="." method="_on_sfx_vol_value_changed"]
[connection signal="pressed" from="FileOptions/Load" to="." method="_on_load_pressed"]
